# Dinov3-JAX-NNX

./: LICENSE  README.md  pyproject.toml  requirements.txt
dinov3/: dinov3.py
dinov3/nn/: attention.py  embedding.py  linear.py  norm.py
